added how to create an external table;

--- a/bigquery_lab.ipynb
+++ b/bigquery_lab.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "id": "b8d1ebbe",
    "metadata": {},
    "outputs": [],
@@ -25,21 +25,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "ff656219",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'2.13.1'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "bigquery.__version__"
    ]
@@ -59,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "1d2362d7",
    "metadata": {},
    "outputs": [],
@@ -100,18 +89,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "id": "de42b5f1-6e24-4a06-814a-ee58ee1660c1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Person\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create table\n",
     "table = dataset.table(table_id=\"Person\")\n",
@@ -134,12 +115,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "id": "7a4e2886-f244-4363-8ee1-aba7c883588c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "uri = \"gs://bigquery-lab/housing.csv\"\n",
+    "uri = \"gs://bigquery-lab/Housing.csv\"\n",
     "\n",
     "try:\n",
     "    dataset = bigquery_client.dataset(dataset_id=\"bigquery_lab\")\n",
@@ -148,28 +129,13 @@
     "    \n",
     "    # Create schema\n",
     "    job_config = bigquery.job.LoadJobConfig(\n",
-    "        schema = [\n",
-    "            bigquery.SchemaField(\"CRIM\", \"Float\"),\n",
-    "            bigquery.SchemaField(\"ZN\", \"Float\"),\n",
-    "            bigquery.SchemaField(\"INDUS\", \"Float\"),\n",
-    "            bigquery.SchemaField(\"CHAS\", \"Integer\"),\n",
-    "            bigquery.SchemaField(\"NOX\", \"Float\"),\n",
-    "            bigquery.SchemaField(\"RM\", \"Float\"),\n",
-    "            bigquery.SchemaField(\"AGE\", \"FLOAT\"),\n",
-    "            bigquery.SchemaField(\"DIS\", \"Float\"),\n",
-    "            bigquery.SchemaField(\"RAD\", \"Float\"),\n",
-    "            bigquery.SchemaField(\"TAX\", \"Float\"),\n",
-    "            bigquery.SchemaField(\"PTRATIO\", \"Float\"),\n",
-    "            bigquery.SchemaField(\"B\", \"FLOAT\"),\n",
-    "            bigquery.SchemaField(\"LSTAT\", \"Float\"),\n",
-    "            bigquery.SchemaField(\"MEDV\", \"Float\")\n",
-    "        ],\n",
-    "        job_config.source_format = bigquery.SourceFormat.CSV,\n",
-    "        job_config.field_delimiter = \",\",\n",
-    "        job_config.skip_leading_rows = 1\n",
+    "        autodetect=True,\n",
+    "        source_format = bigquery.SourceFormat.CSV,\n",
+    "        field_delimiter = \",\",\n",
+    "        skip_leading_rows = 1\n",
     "    )\n",
     "\n",
-    "    load_job = bigquery_client.load_table_from_uri(source_uris=uri, location=table, job_config=job_config)\n",
+    "    load_job = bigquery_client.load_table_from_uri(source_uris=uri, destination=table, job_config=job_config)\n",
     "\n",
     "    load_job.result()\n",
     "except Exception as err:\n",
@@ -177,14 +143,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "649deab7",
+   "metadata": {},
+   "source": [
+    "#### Import csv from local storage"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "id": "48ab05a0-32e6-4147-8818-b291be8837a0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "uri = \"gs://bigquery-lab/titanic.csv\"\n",
-    "\n",
     "try:\n",
     "    dataset = bigquery_client.dataset(dataset_id=\"bigquery_lab\")\n",
     "    table = dataset.table(table_id=\"titanic\")\n",
@@ -193,8 +165,11 @@
     "        field_delimiter=\";\",\n",
     "        source_format=bigquery.SourceFormat.CSV\n",
     "    )\n",
-    "\n",
-    "    load_job = bigquery_client.load_table_from_uri(source_uris=ruri, location=table, job_config=job_config)\n",
+    "    \n",
+    "    with open(\"./titanic.csv\", \"rb\") as source_file:\n",
+    "        load_job = bigquery_client.load_table_from_file(file_obj=source_file, \n",
+    "                                                        destination=table, \n",
+    "                                                        job_config=job_config)\n",
     "\n",
     "    load_job.result()\n",
     "except Exception as err:\n",
@@ -211,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "id": "a45d020b-262e-4eba-b66b-a4cecb90f17a",
    "metadata": {},
    "outputs": [],
@@ -228,146 +203,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "id": "fb35a7b0-94d5-4047-bbee-053bd8e5a382",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>PassengerId</th>\n",
-       "      <th>Survived</th>\n",
-       "      <th>Pclass</th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Sex</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>SibSp</th>\n",
-       "      <th>Parch</th>\n",
-       "      <th>Ticket</th>\n",
-       "      <th>Fare</th>\n",
-       "      <th>Cabin</th>\n",
-       "      <th>Embarked</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>180</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Leonard, Mr. Lionel</td>\n",
-       "      <td>male</td>\n",
-       "      <td>36.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>LINE</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>None</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>264</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Harrison, Mr. William</td>\n",
-       "      <td>male</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>112059</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>B94</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>278</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Parkes, Mr. Francis \"Frank\"</td>\n",
-       "      <td>male</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>239853</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>None</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>303</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Johnson, Mr. William Cahoone Jr</td>\n",
-       "      <td>male</td>\n",
-       "      <td>19.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>LINE</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>None</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>414</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Cunningham, Mr. Alfred Fleming</td>\n",
-       "      <td>male</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>239853</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>None</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   PassengerId  Survived  Pclass                             Name   Sex   Age  \\\n",
-       "0          180         0       3              Leonard, Mr. Lionel  male  36.0   \n",
-       "1          264         0       1            Harrison, Mr. William  male  40.0   \n",
-       "2          278         0       2      Parkes, Mr. Francis \"Frank\"  male   NaN   \n",
-       "3          303         0       3  Johnson, Mr. William Cahoone Jr  male  19.0   \n",
-       "4          414         0       2   Cunningham, Mr. Alfred Fleming  male   NaN   \n",
-       "\n",
-       "   SibSp  Parch  Ticket  Fare Cabin Embarked  \n",
-       "0      0      0    LINE   0.0  None        S  \n",
-       "1      0      0  112059   0.0   B94        S  \n",
-       "2      0      0  239853   0.0  None        S  \n",
-       "3      0      0    LINE   0.0  None        S  \n",
-       "4      0      0  239853   0.0  None        S  "
-      ]
-     },
-     "execution_count": 68,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "results.head()"
    ]
@@ -382,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": null,
    "id": "fb294a96-bc42-4d70-afa9-1690742eaf23",
    "metadata": {},
    "outputs": [],
@@ -394,11 +233,99 @@
     "extract_job = bigquery_client.extract_table(source=table, destination_uris=destination_uri)\n",
     "extract_job.result()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9cbd3715",
+   "metadata": {},
+   "source": [
+    "#### External table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0585f274",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get schema from table\n",
+    "\n",
+    "table_name = \"housing\"\n",
+    "dataset_name = \"bigquery_lab\"\n",
+    "uri = \"gs://bigquery-lab/Housing.csv\"\n",
+    "project_id = \"dataengineer-310515\"\n",
+    "\n",
+    "# Configure the external data source and query job.\n",
+    "table_ref = bigquery.DatasetReference(project=project_id, dataset_id=dataset_name).table(table_name)\n",
+    "\n",
+    "schema = [\n",
+    "    bigquery.SchemaField(name=\"price\", field_type=\"STRING\", mode=\"NULLABLE\"),\n",
+    "    bigquery.SchemaField(name=\"area\", field_type=\"STRING\", mode=\"NULLABLE\"),\n",
+    "    bigquery.SchemaField(name=\"bedrooms\", field_type=\"STRING\", mode=\"NULLABLE\"),\n",
+    "    bigquery.SchemaField(name=\"bathrooms\", field_type=\"STRING\", mode=\"NULLABLE\"),\n",
+    "    bigquery.SchemaField(name=\"stories\", field_type=\"STRING\", mode=\"NULLABLE\"),\n",
+    "    bigquery.SchemaField(name=\"mainroad\", field_type=\"STRING\", mode=\"NULLABLE\"),\n",
+    "    bigquery.SchemaField(name=\"guestroom\", field_type=\"STRING\", mode=\"NULLABLE\"),\n",
+    "    bigquery.SchemaField(name=\"basement\", field_type=\"STRING\", mode=\"NULLABLE\"),\n",
+    "    bigquery.SchemaField(name=\"hotwaterheating\", field_type=\"STRING\", mode=\"NULLABLE\"),\n",
+    "    bigquery.SchemaField(name=\"airconditioning\", field_type=\"STRING\", mode=\"NULLABLE\"),\n",
+    "    bigquery.SchemaField(name=\"parking\", field_type=\"STRING\", mode=\"NULLABLE\"),\n",
+    "    bigquery.SchemaField(name=\"prefarea\", field_type=\"STRING\", mode=\"NULLABLE\"),\n",
+    "    bigquery.SchemaField(name=\"furnishingstatus\", field_type=\"STRING\", mode=\"NULLABLE\")\n",
+    "]\n",
+    "\n",
+    "table = bigquery.Table(table_ref, schema=schema)\n",
+    "\n",
+    "external_config = bigquery.ExternalConfig(\"CSV\")\n",
+    "external_config.source_uris = [uri]\n",
+    "external_config.options.field_delimiter = \",\"\n",
+    "external_config.options.skip_leading_rows = 1\n",
+    "\n",
+    "table.external_data_configuration = external_config\n",
+    "# Create a permanent table linked to the GCS file\n",
+    "bigquery_client.delete_table(table=table, not_found_ok=True)\n",
+    "bigquery_client.create_table(table=table, exists_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "724fdc53",
+   "metadata": {},
+   "source": [
+    "#### Get table schema"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a0e0fbc1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "table_name = \"titanic\"\n",
+    "dataset_name = \"bigquery_lab\"\n",
+    "\n",
+    "\n",
+    "table_ref = bigquery_client.get_dataset(dataset_ref=dataset_name).table(table_id=table_name)\n",
+    "table = bigquery_client.get_table(table=table_ref)\n",
+    "schema = table.schema\n",
+    "\n",
+    "schema"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f5f6678f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
